objects/GEMS_Contract_Admin_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>IF(CONTAINS(TEXT(Case__r.GEMS_Submission_Type__c),&apos;Maintenance&apos;),HYPERLINK(Case__r.Account.Id,Case__r.Account.Name, &quot;_self&quot;),HYPERLINK(Opportunity_Link__r.Account.Id, Opportunity_Link__r.Account.Name, &quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>IF(CONTAINS(TEXT(Case__r.GEMS_Submission_Type__c),&apos;Maintenance&apos;), Case__r.Account_Number__c ,Opportunity_Link__r.Account.External_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Submission Info</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Contract Admin Requests</relationshipLabel>
        <relationshipName>Contract_Admin_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract Admin</fullName>
                    <default>true</default>
                    <label>Contract Admin</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <label>Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>002</fullName>
                </value>
                <value>
                    <fullName>003</fullName>
                </value>
                <value>
                    <fullName>004</fullName>
                </value>
                <value>
                    <fullName>005</fullName>
                </value>
                <value>
                    <fullName>006</fullName>
                </value>
                <value>
                    <fullName>007</fullName>
                </value>
                <value>
                    <fullName>008</fullName>
                </value>
                <value>
                    <fullName>009</fullName>
                </value>
                <value>
                    <fullName>010</fullName>
                </value>
                <value>
                    <fullName>011</fullName>
                </value>
                <value>
                    <fullName>012</fullName>
                </value>
                <value>
                    <fullName>013</fullName>
                </value>
                <value>
                    <fullName>014</fullName>
                </value>
                <value>
                    <fullName>015</fullName>
                </value>
                <value>
                    <fullName>016</fullName>
                </value>
                <value>
                    <fullName>017</fullName>
                </value>
                <value>
                    <fullName>018</fullName>
                </value>
                <value>
                    <fullName>019</fullName>
                </value>
                <value>
                    <fullName>020</fullName>
                </value>
                <value>
                    <fullName>021</fullName>
                </value>
                <value>
                    <fullName>022</fullName>
                </value>
                <value>
                    <fullName>023</fullName>
                </value>
                <value>
                    <fullName>024</fullName>
                </value>
                <value>
                    <fullName>025</fullName>
                </value>
                <value>
                    <fullName>026</fullName>
                </value>
                <value>
                    <fullName>027</fullName>
                </value>
                <value>
                    <fullName>028</fullName>
                </value>
                <value>
                    <fullName>029</fullName>
                </value>
                <value>
                    <fullName>030</fullName>
                </value>
                <value>
                    <fullName>031</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <description>Timestamp of request creation</description>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                </value>
                <value>
                    <fullName>002</fullName>
                </value>
                <value>
                    <fullName>004</fullName>
                </value>
                <value>
                    <fullName>005</fullName>
                </value>
                <value>
                    <fullName>006</fullName>
                </value>
                <value>
                    <fullName>007</fullName>
                </value>
                <value>
                    <fullName>015</fullName>
                </value>
                <value>
                    <fullName>016</fullName>
                </value>
                <value>
                    <fullName>017</fullName>
                </value>
                <value>
                    <fullName>025</fullName>
                </value>
                <value>
                    <fullName>026</fullName>
                </value>
                <value>
                    <fullName>027</fullName>
                </value>
                <value>
                    <fullName>028</fullName>
                </value>
                <value>
                    <fullName>029</fullName>
                </value>
                <value>
                    <fullName>030</fullName>
                </value>
                <value>
                    <fullName>031</fullName>
                </value>
                <value>
                    <fullName>032</fullName>
                </value>
                <value>
                    <fullName>037</fullName>
                </value>
                <value>
                    <fullName>038</fullName>
                </value>
                <value>
                    <fullName>043</fullName>
                </value>
                <value>
                    <fullName>061</fullName>
                </value>
                <value>
                    <fullName>062</fullName>
                </value>
                <value>
                    <fullName>063</fullName>
                </value>
                <value>
                    <fullName>098</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>116</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>240</fullName>
                </value>
                <value>
                    <fullName>290</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GEMS_Request_ID__c</fullName>
        <formula>Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_HCSC_Division__c</fullName>
        <label>HCSC Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
                <value>
                    <fullName>NM</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Major National</fullName>
                </value>
                <value>
                    <fullName>Large/Mid Market</fullName>
                </value>
                <value>
                    <fullName>SCP</fullName>
                </value>
                <value>
                    <fullName>Student Health</fullName>
                </value>
                <value>
                    <fullName>ENA GET</fullName>
                </value>
                <value>
                    <fullName>Major National GET</fullName>
                </value>
                <value>
                    <fullName>Municipal GET</fullName>
                </value>
                <value>
                    <fullName>Mid Market</fullName>
                </value>
                <value>
                    <fullName>Municipal</fullName>
                </value>
                <value>
                    <fullName>ENA,</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFG</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>ALI</fullName>
                </value>
                <value>
                    <fullName>APS</fullName>
                </value>
                <value>
                    <fullName>COMA</fullName>
                </value>
                <value>
                    <fullName>CPAA</fullName>
                </value>
                <value>
                    <fullName>EAML</fullName>
                </value>
                <value>
                    <fullName>FEP</fullName>
                </value>
                <value>
                    <fullName>HA</fullName>
                </value>
                <value>
                    <fullName>HCS2</fullName>
                </value>
                <value>
                    <fullName>HMSG</fullName>
                </value>
                <value>
                    <fullName>HSC1</fullName>
                </value>
                <value>
                    <fullName>HWB</fullName>
                </value>
                <value>
                    <fullName>IMTL</fullName>
                </value>
                <value>
                    <fullName>IMTS</fullName>
                </value>
                <value>
                    <fullName>JG</fullName>
                </value>
                <value>
                    <fullName>LAN</fullName>
                </value>
                <value>
                    <fullName>LG</fullName>
                </value>
                <value>
                    <fullName>LGC</fullName>
                </value>
                <value>
                    <fullName>LGL</fullName>
                </value>
                <value>
                    <fullName>LGN</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MAC</fullName>
                </value>
                <value>
                    <fullName>MARL</fullName>
                </value>
                <value>
                    <fullName>MBIL</fullName>
                </value>
                <value>
                    <fullName>MCCL</fullName>
                </value>
                <value>
                    <fullName>MCUL</fullName>
                </value>
                <value>
                    <fullName>MGC</fullName>
                </value>
                <value>
                    <fullName>MGL</fullName>
                </value>
                <value>
                    <fullName>MINAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Enrollment_Start_Date__c</fullName>
        <label>Open Enrollment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>GEMS_SBC_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>000</fullName>
                </value>
                <value>
                    <fullName>001</fullName>
                </value>
                <value>
                    <fullName>002</fullName>
                </value>
                <value>
                    <fullName>003</fullName>
                </value>
                <value>
                    <fullName>006</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>NM</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_Sub_Type__c</fullName>
        <formula>IF(INCLUDES(Case__r.GEMS_Submission_Sub_Type__c , &quot;Account Structure Change&quot;),&quot;Account Structure Change; &quot;,null ) &amp;
IF(INCLUDES(Case__r.GEMS_Submission_Sub_Type__c , &quot;Benefit Change&quot;), &quot;Benefit Change; &quot;,null ) &amp;
IF(INCLUDES(Case__r.GEMS_Submission_Sub_Type__c , &quot;Eligibility Changes&quot;),&quot;Eligibility Changes; &quot;,null ) &amp; 
IF(INCLUDES(Case__r.GEMS_Submission_Sub_Type__c , &quot;Funding Change&quot;),&quot;Funding Change; &quot;,null ) &amp; 
IF(INCLUDES(Case__r.GEMS_Submission_Sub_Type__c , &quot;No Changes&quot;),&quot;No Changes; &quot;,null ) &amp;
IF(INCLUDES(Case__r.GEMS_Submission_Sub_Type__c , &quot;Adding/Removing Eligibility&quot;),&quot;Adding/Removing Eligibility; &quot;,null ) &amp; 
IF(INCLUDES(Case__r.GEMS_Submission_Sub_Type__c , &quot;Updates to Cancel Timing Rule&quot;),&quot;Updates to Cancel Timing Rule; &quot;,null ) &amp;
IF(INCLUDES(Case__r.GEMS_Submission_Sub_Type__c , &quot;Updates to New Employee Period&quot;),&quot;Updates to New Employee Period; &quot;,null ) &amp;
IF(INCLUDES(Case__r.GEMS_Submission_Sub_Type__c , &quot;Account Name&quot;),&quot;Account Name; &quot;,null ) &amp; 
IF(INCLUDES(Case__r.GEMS_Submission_Sub_Type__c , &quot;Address&quot;),&quot;Address; &quot;,null ) &amp; 
IF(INCLUDES(Case__r.GEMS_Submission_Sub_Type__c , &quot;Contact Information&quot;),&quot;Contact Information; &quot;,null ) &amp; 
IF(INCLUDES(Case__r.GEMS_Submission_Sub_Type__c , &quot;Contact Usage&quot;),&quot;Contact Usage; &quot;,null ) &amp; 
IF(INCLUDES(Case__r.GEMS_Submission_Sub_Type__c , &quot;Updates to OE Date&quot;),&quot;Updates to OE Date; &quot;,null ) &amp; 
IF(INCLUDES(Case__r.GEMS_Submission_Sub_Type__c , &quot;Updating AEP checkbox&quot;),&quot;Updating AEP checkbox; &quot;,null )</formula>
        <label>Submission Sub Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Type__c</fullName>
        <formula>IF(Case__c!=NULL,TEXT(Case__r.GEMS_Submission_Type__c),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submission Type</label>
        <type>Text</type>
    </fields>
    <label>Contract Admin Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Opportunity_Link__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Number__c</columns>
        <columns>Case__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Contract_Admin_Request</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Opportunity_Link__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Number__c</columns>
        <columns>Case__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>My Contract Admin Request</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Admin Requests</pluralLabel>
    <recordTypes>
        <fullName>GEMS_SBC_Benefit_Booklet_Request</fullName>
        <active>true</active>
        <label>GEMS SBC &amp; Benefit Booklet Request</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>